@@ -1,3 +1,11 @@
+2010-01-06  Tiger Soldier  <tigersoldi@gmail.com>
+
+	* src/ol_player_xmms2.c: ADD: XMMS2 support
+
+2010-01-05  Tiger Soldier  <tigersoldi@gmail.com>
+
+	* src/ol_player_exaile03.c: FIX: issue 34, getting music info in Exaile will not return false when lack of artist.
+
 2010-01-04  Tiger Soldier  <tigersoldi@gmail.com>
 
 	* src/ol_main.c: FIX: issue 35, create lyrics directory on downloading if not exists.
